# unlock-keepassxc-keyfile

./: .gitignore  Cargo.toml  README.md  kp_unlock_linux.sh  kp_unlock_windows.ps1  setup_keyfile.sh
src/: cli.rs  config.rs  crypto.rs  keyfile.rs  launcher.rs  main.rs
